--- a/copiedfromgfg.html
+++ b/copiedfromgfg.html
@@ -1,9 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
 <!-- Display the countdown timer in an element -->
 <p id="demo"></p>
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Jun 9, 2026 9:00:00").getTime();
+var countDownDate = new Date("Jun 9, 2025 9:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -31,3 +37,7 @@ var x = setInterval(function() {
   }
 }, 1000);
 </script>
+<p> Good luck. </p>
+
+</body>
+</html>
