--- a/2025examcountdown.html
+++ b/2025examcountdown.html
@@ -3,6 +3,11 @@
 <head>
 <title>Page Title</title>
 </head>
+<style>
+body {
+  font-family: "Comic Sans MS", cursive;
+}
+</style>
 <body>
 <!-- Display the countdown timer in an element -->
 <p id="demo"></p>
