--- a/2025examcountdown.html
+++ b/2025examcountdown.html
@@ -38,11 +38,11 @@ var x = setInterval(function() {
   // If the count down is finished, write some text
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = "EXAMS HAVE BEGUN!!";
   }
 }, 1000);
 </script>
- 
+<img src="https://64.media.tumblr.com/9807b2eaa28bfcf4de69b9461ce8b08b/a88e843de89ef41c-c7/s1280x1920/0c25875c20a8161183c38957f6fa7db80e228e30.jpg" alt="I'm not a procrastinator,">
 <p> Good luck. </p>
 
 </body>
