--- a/2025examcountdown.html
+++ b/2025examcountdown.html
@@ -30,10 +30,11 @@ var x = setInterval(function() {
   var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+  var milliseconds = Math.floor((distance %(1000))
 
   // Display the result in the element with id="demo"
   document.getElementById("demo").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
+  + minutes + "m " + seconds + "s " + milliseconds + "ms ";
 
   // If the count down is finished, write some text
   if (distance < 0) {
