--- a/testing.html
+++ b/testing.html
@@ -4,10 +4,12 @@
         <!-- this is a comment. THE HEAD has information about the page-->
     </head>
     <body>
+        body{
         text-align: center; 
         font-family: 'Comic Sans MS';
         background: purple; 
         color: white 
+        }
         <!-- this is the body. it has stuff that will show on the actual page-->
          <h1>WELCOME!</h1>
          <h2>hello is said</h2>
