--- a/testing.html
+++ b/testing.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- this is a comment. THE HEAD has information about the page-->
-    </head>
-    <body>
+    <style>
         body {
             text-align: center; 
             font-family: 'Comic Sans MS';
             background: purple; 
-            color: white 
+            color: white;
         }
+    </style>
+    <head>
+        <!-- this is a comment. THE HEAD has information about the page-->
+    </head>
+    <body>
         <!-- this is the body. it has stuff that will show on the actual page-->
          <h1>WELCOME!</h1>
          <h2>hello is said</h2>
